--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     "glob": "^7.0.6",
     "moment": "^2.15.0",
     "progress": "^1.1.8",
-    "sharp": "^0.16.0"
+    "sharp": "v0.25.2"
   }
 }
