--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "url": "git+https://github.com/adambrgmn/rawly.git"
   },
   "scripts": {
-     "build": "tsc",
-    "prepare": "npm run build"
+    "build": "tsc",
+    "prepare": "npm run build",
     "prepublish": "gulp prepublish",
     "test": "tape './test/**/*.spec.js' -r ./test/setup | tap-spec",
     "v": "npm --no-git-tag-version version"
