--- a/package.json
+++ b/package.json
@@ -48,14 +48,16 @@
     "isparta": "^4.0.0",
     "rimraf": "^2.5.4",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.0"
+    "tape": "^4.6.0",
+    "typescript": "^3.3.3333"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adambrgmn/rawly.git"
   },
   "scripts": {
-    "build": "npm run build",
+    "build": "tsc",
+    "prepare": "npm run build",
     "prepublish": "gulp prepublish",
     "test": "tape './test/**/*.spec.js' -r ./test/setup | tap-spec",
     "v": "npm --no-git-tag-version version"
